k8s-local/observability/grafana/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
    - grafana.localhost
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: grafana
          port: 80
